Fix PR19560 by improving the relay code.

* staprun/relay.c (reader_thread): Use mutex when accessing state
  variable.
  (switchfile_handler): Ditto. Also don't send the USR2 signal to the same
  thread running the signal handler.
  (init_relayfs): Initialize the mutexes.
  (close_relayfs): Destroy the mutexes.